--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         svg {
             display: block;
         }
-        #chart1, svg {
-            margin: 0px;
-            padding: 0px;
-            width: 100%;
+        #chart, svg {
+            margin: 20px;
+            padding: 20pt;
+            width: 800px;
             height: 600px;
         }
         body {
@@ -51,7 +51,7 @@
 <h1>
   <input type="text" id="repo" placeholder="twbs/bootstrap" >
   <button type="button" name="button" >Get star history</button></h1>
-<div id="chart1">
+<div id="chart">
     <svg></svg>
 </div>
 
