--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta http-equiv="REFRESH" content="0;url=https://github.com/login/oauth/authorize?client_id=4e4f2621589085b864d7">
   <meta charset="utf-8">
   <link href="./nvd3.css" rel="stylesheet" type="text/css">
   <style>
@@ -55,6 +56,7 @@
     }
   </style>
   <title>Star history</title>
+
 </head>
 
 <body>
@@ -63,7 +65,7 @@
       <input type="text" id="repo" placeholder="twbs/bootstrap">
       <button type="button" name="button">Get star history</button>
     </form>
-    
+
   </div>
 <iframe src="https://ghbtns.com/github-btn.html?user=timqian&repo=star_history&type=star&count=true" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
 <iframe src="https://ghbtns.com/github-btn.html?user=timqian&repo=star_history&type=fork&count=true" frameborder="0" scrolling="0" width="108px" height="30px"></iframe>
