--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
 <body>
   <div class="nav">
-      <input type="text" id="repo" placeholder="twbs/bootstrap">
-      <button type="button" name="button" id="theBtn" >Get star history</button>
+      <input type="text" id="repo" placeholder="torvalds/linux">
+      <button type="button" name="button" id="theBtn" >See star history</button>
       <img src="loadinfo.net.gif" alt="Loding..." id="theGif" style="display: none;">
   </div>
 <iframe src="https://ghbtns.com/github-btn.html?user=timqian&repo=star_history&type=star&count=true" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
