--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
       font: 12px sans-serif;
     }
 
-    svg {
+    .svg {
       display: block;
     }
 
     #chart,
-    svg {
+    .svg {
       display: block;
       margin-left: auto;
       margin-right: auto;
@@ -71,7 +71,7 @@
 <iframe src="https://ghbtns.com/github-btn.html?user=timqian&repo=star_history&type=star&count=true" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
 <iframe src="https://ghbtns.com/github-btn.html?user=timqian&repo=star_history&type=fork&count=true" frameborder="0" scrolling="0" width="108px" height="30px"></iframe>
   <div id="chart">
-    <svg></svg>
+    <svg name="svg"></svg>
   </div>
 
   </script>
