--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
       <button type="button" name="button" id="theBtn" >See star history</button>
       <img src="loadinfo.net.gif" alt="Loding..." id="theGif" style="display: none;">
   </div>
-<iframe src="https://ghbtns.com/github-btn.html?user=timqian&repo=star_history&type=star&count=true" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
-<iframe src="https://ghbtns.com/github-btn.html?user=timqian&repo=star_history&type=fork&count=true" frameborder="0" scrolling="0" width="108px" height="30px"></iframe>
+  <a href="https://github.com/timqian/star-history"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
   <div id="chart">
     <svg></svg>
   </div>
