update code structure

--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html>
-
 <head>
   <meta charset="utf-8">
-  <link href="./nvd3.css" rel="stylesheet" type="text/css">
+  <link href="./assects/nvd3.css" rel="stylesheet" type="text/css">
   <style>
     text {
       font: 12px sans-serif;
@@ -65,7 +62,7 @@
   <div class="nav">
       <input type="text" id="repo" placeholder="torvalds/linux">
       <button type="button" name="button" id="theBtn" >See star history</button>
-      <img src="loadinfo.net.gif" alt="Loding..." id="theGif" style="display: none;">
+      <img src="./assects/loadinfo.net.gif" alt="Loding..." id="theGif" style="display: none;">
   </div>
   <a href="https://github.com/timqian/star-history"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
   <div id="chart">
@@ -73,32 +70,32 @@
   </div>
 
   </script>
-  <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
-  
+  <script type="text/javascript" src="./dist/bundle.js" charset="utf-8"></script>
+
   <!---------------------------------------Disqus-->
-<h4>Leave a comment</h4>
-<div id="disqus_thread"></div>
-<script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES * * */
-    var disqus_shortname = 'wwwtimqiancom';
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-<script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES * * */
-    var disqus_shortname = 'wwwtimqiancom';
-    
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function () {
-        var s = document.createElement('script'); s.async = true;
-        s.type = 'text/javascript';
-        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
-        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
-    }());
-</script>
-<!---------------------------------------Disqus-->
+  <h4>Leave a comment</h4>
+  <div id="disqus_thread"></div>
+  <script type="text/javascript">
+      /* * * CONFIGURATION VARIABLES * * */
+      var disqus_shortname = 'wwwtimqiancom';
+      /* * * DON'T EDIT BELOW THIS LINE * * */
+      (function() {
+          var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+          dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+          (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+      })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+  <script type="text/javascript">
+      /* * * CONFIGURATION VARIABLES * * */
+      var disqus_shortname = 'wwwtimqiancom';
+
+      /* * * DON'T EDIT BELOW THIS LINE * * */
+      (function () {
+          var s = document.createElement('script'); s.async = true;
+          s.type = 'text/javascript';
+          s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+          (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+      }());
+  </script>
+  <!---------------------------------------Disqus-->
