add extension version

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
   <div id="chart">
     <svg></svg>
   </div>
+  News: <a href="https://github.com/timqian/star-history-plugin">Chrome extension version of star-history</a> is now available.
 
   </script>
   <script type="text/javascript" src="./dist/bundle.js" charset="utf-8"></script>
 
   <!---------------------------------------Disqus-->
-  <h4>Leave a comment</h4>
   <div id="disqus_thread"></div>
   <script type="text/javascript">
       /* * * CONFIGURATION VARIABLES * * */
