--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <div id="chart">
     <svg></svg>
   </div>
-  News: <a href="https://github.com/timqian/star-history-plugin">Chrome extension version of star-history</a> is now available.
+  News: <a href="https://github.com/timqian/star-history-plugin">Chrome extension version of star-history</a> is now available. (with higher rate limit)
 
   </script>
   <script type="text/javascript" src="./dist/bundle.js" charset="utf-8"></script>
