--- a/index.html
+++ b/index.html
@@ -75,14 +75,25 @@
   <script type="text/javascript" src="./dist/bundle.js" charset="utf-8"></script>
 
 <!--广告-->
-  <form action="http://www.google.com" id="cse-search-box">
-    <div>
-      <input type="hidden" name="cx" value="partner-pub-3099121198874984:7445379755" />
-      <input type="hidden" name="ie" value="UTF-8" />
-      <input type="text" name="q" size="55" />
-      <input type="submit" name="sa" value="Search" />
-    </div>
-  </form>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- timqian.com_2016-3-22 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-3099121198874984"
+     data-ad-slot="1398846159"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
-  <script type="text/javascript" src="http://www.google.com/coop/cse/brand?form=cse-search-box&amp;lang=en"></script>
+<!--------------------------------Google analytics-->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-56506279-1', 'auto');
+  ga('send', 'pageview');
+</script>
+<!--------------------------------Google analytics-->
