--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <script type="text/javascript" src="./dist/bundle.js" charset="utf-8"></script>
 
 <!--广告-->
-<script async src="http://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- timqian.com_2016-3-22 -->
 <ins class="adsbygoogle"
      style="display:block"
