--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 
+<script>
+  google_ad_client=“ca-pub-3099121198874984”;
+  google_ad_slot=“1398846159”;
+  google_ad_width=800;
+  google_ad_height=200;
+</script>
+<script src="//pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+
 <!--------------------------------Google analytics-->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
