--- a/index.html
+++ b/index.html
@@ -86,6 +86,16 @@
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- timqian-2016-3-28 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-3099121198874984"
+     data-ad-slot="6310920150"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 <script>
   google_ad_client=“ca-pub-3099121198874984”;
   google_ad_slot=“1398846159”;
