--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="./assets/nvd3.css" rel="stylesheet" type="text/css">
   <style>
     text {
@@ -65,12 +66,14 @@
       <img src="./assets/loadinfo.net.gif" alt="Loding..." id="theGif" style="display: none;">
   </div>
   <a href="https://github.com/timqian/star-history"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
+  
+  <h5>
+    <a href="https://github.com/timqian/star-history-plugin">Chrome extension version of star-history</a>
+  </h5>
+  
   <div id="chart">
     <svg></svg>
   </div>
-  <h4>
-    <a href="https://github.com/timqian/star-history-plugin">Chrome extension version of star-history</a>
-  </h4>
   </script>
   <script type="text/javascript" src="./dist/bundle.js" charset="utf-8"></script>
 
