fit phone screen

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="./assets/nvd3.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.0/gh-fork-ribbon.min.css" />
+  <!--[if lt IE 9]>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.0/gh-fork-ribbon.ie.min.css" />
+  <![endif]-->
   <style>
     text {
       font: 12px sans-serif;
@@ -18,8 +22,8 @@
       margin-right: auto;
       margin: auto;
       padding-right: 20pt;
-      width: 800px;
-      height: 600px;
+      max-width: 800px;
+      height: 80%;
     }
 
     body {
@@ -38,10 +42,10 @@
     }
 
     input {
-      width: 350px;
-      height: 23px;
+      width: 300px;
+      height: 30px;
       font-size: 15pt;
-      padding: 2pt 2pt;
+      margin:4pt;
     }
 
     button {
@@ -65,15 +69,15 @@
       <button type="button" name="button" id="theBtn" >See star history</button>
       <img src="./assets/loadinfo.net.gif" alt="Loding..." id="theGif" style="display: none;">
   </div>
-  <a href="https://github.com/timqian/star-history"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
-  
-  <h5>
-    <a href="https://github.com/timqian/star-history-plugin">Chrome extension version of star-history</a>
-  </h5>
-  
+
+  <a class="github-fork-ribbon" href="http://github.com/timqian/star-history" title="Fork me on GitHub">Fork me on GitHub</a>
+
   <div id="chart">
     <svg></svg>
   </div>
+
+  <a href="https://github.com/timqian/star-history-plugin">Chrome extension version of star-history</a>
+
   </script>
   <script type="text/javascript" src="./dist/bundle.js" charset="utf-8"></script>
 
