--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     }
 
     input {
-      width: 300px;
+      max-width: 300px;
       height: 30px;
       font-size: 15pt;
       margin:4pt;
