--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <img src="./assets/loadinfo.net.gif" alt="Loding..." id="theGif" style="display: none;">
   </div>
 
-  <a class="github-fork-ribbon" href="http://github.com/timqian/star-history" title="Fork me on GitHub">Fork me on GitHub</a>
+  <a class="github-fork-ribbon right-bottom fixed" href="http://github.com/timqian/star-history" title="Fork me on GitHub">Fork me on GitHub</a>
 
   <div id="chart">
     <svg></svg>
