--- a/index.html
+++ b/index.html
@@ -49,11 +49,13 @@
     }
 
     input[type=submit] {
+      text-decoration: none;
       text-align: center;
       font-size: 16pt;
       background-color: #01A94C;
       color: white;
       border-radius: 24pt;
+      padding: 6pt 12pt;
       cursor: default;
     }
   </style>
