--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
   </div>
 
   <a href="https://github.com/timqian/star-history-plugin">Chrome extension version of star-history</a>
-
+  <br/>
+  <a href="https://github.com/timqian/star-history/blob/gh-pages/README.md#updates">Updates</a>
   </script>
   <script type="text/javascript" src="./dist/bundle.js" charset="utf-8"></script>
 
