--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
       font-size: 15pt;
       margin:4pt;
     }
-
-    #theBtn {
+    button {
       text-decoration: none;
       text-align: center;
       font-size: 16pt;
@@ -58,10 +57,21 @@
       padding: 6pt 10pt;
       cursor: default;
     }
+
     #theForm {
       display: inline-block;
       padding: 0;
       margin: 0;
+    }
+
+    footer {
+      max-width: 800px;
+      margin: auto;
+    }
+    
+    #clearBtn {
+      float: right;
+      background-color: #9b0000;
     }
   </style>
   <title>Star history</title>
@@ -83,21 +93,24 @@
     <svg></svg>
   </div>
 
-  <a href="https://github.com/timqian/star-history-plugin">Chrome extension version of star-history</a>
-  <br/>
-  <a href="https://github.com/timqian/star-history/blob/gh-pages/README.md#updates">Updates</a>
-  </script>
+  <footer>
+    <button id="clearBtn" >clear</button>
+    <a href="https://github.com/timqian/star-history-plugin">Chrome extension version of star-history</a>
+    <br/>
+    <a href="https://github.com/timqian/star-history/blob/gh-pages/README.md#updates">Updates</a>
+  </footer>
+
   <script type="text/javascript" src="./dist/bundle.js" charset="utf-8"></script>
 
-<!--Google analytics-->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <!--Google analytics-->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-56506279-1', 'auto');
-  ga('send', 'pageview');
-</script>
-<!--Google analytics-->
+    ga('create', 'UA-56506279-1', 'auto');
+    ga('send', 'pageview');
+  </script>
+  <!--Google analytics-->
 </body>
