--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
   <footer>
     <button id="clearBtn" >clear</button>
-    <a href="https://github.com/timqian/star-history-plugin">Chrome extension version of star-history</a>
+    <a href="https://github.com/timqian/star-history-plugin">Chrome extension</a>
     <br/>
     <a href="https://github.com/timqian/star-history/blob/gh-pages/README.md#updates">Updates</a>
   </footer>
