make loding icon stable

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <input type="text" id="repo" name="repo" placeholder="torvalds/linux">
         <button type="submit" id="theBtn" >See star history</button>
       </form>
-      <img src="./assets/loadinfo.net.gif" alt="Loading..." id="theGif" style="display: none;">
+      <img src="./assets/loadinfo.net.gif" alt="Loading..." id="theGif" style="visibility:hidden;">
   </div>
 
   <a class="github-fork-ribbon" href="http://github.com/timqian/star-history" title="Fork me on GitHub">Fork me on GitHub</a>
